// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components-button > renders as full width 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-brown text-black-bold shadow-border-brown hover:bg-brown/90"
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-black-slight text-white shadow-border-black-slight hover:bg-black-slight/90"
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-transparent text-white shadow-border-white hover:bg-white/5"
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-brown text-black-bold shadow-border-brown hover:bg-brown/90 w-full"
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-brown text-black-bold shadow-border-brown hover:bg-brown/90 w-full"
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components-button > renders as ghost 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-brown text-black-bold shadow-border-brown hover:bg-brown/90"
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-black-slight text-white shadow-border-black-slight hover:bg-black-slight/90"
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-transparent text-white shadow-border-white hover:bg-white/5"
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-transparent text-white shadow-border-white hover:bg-white/5"
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components-button > renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-brown text-black-bold shadow-border-brown hover:bg-brown/90"
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-brown text-black-bold shadow-border-brown hover:bg-brown/90"
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components-button > renders with black color 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-brown text-black-bold shadow-border-brown hover:bg-brown/90"
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-black-slight text-white shadow-border-black-slight hover:bg-black-slight/90"
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="rounded-2 px-3.5 py-2.5 text-sm transition-all duration-200 ease-in-out bg-black-slight text-white shadow-border-black-slight hover:bg-black-slight/90"
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
